--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,24 +164,24 @@ update_addons_list_and_trans:
     <<: *except_auto_commits
     allow_failure: true
 
+
 .deploy_review_definition: &deploy_review_definition
     stage: deploy
-    variables:
-        CI_REVIEW_INSTALL_APT_DEPS: "poppler-utils libmagic1"
     before_script:
         - ci-review-app init
     script:
         - ci-review-app start
     tags:
-        - traefic
-        - review-apps
         - deploy
+        - odoo-review-ci4-shared
+        - review-apps
+
 
 deploy_review_dev:
     <<: *deploy_review_definition
     environment:
-        name: review/$SERIES_BRANCH/$CI_COMMIT_REF_NAME
-        url: http://$CI_ENVIRONMENT_SLUG-$CI_PROJECT_ID.ci3.crnd.pro
+        name: review/$CI_COMMIT_REF_NAME
+        url: http://$CI_ENVIRONMENT_SLUG-$CI_PROJECT_ID.ci4.crnd.pro
         on_stop: stop_review_dev
         auto_stop_in: 1 week
     <<: *only_dev_branch
@@ -191,13 +191,13 @@ deploy_review_stable:
     <<: *deploy_review_definition
     environment:
         name: stable/$CI_COMMIT_REF_NAME
-        url: http://$CI_ENVIRONMENT_SLUG-$CI_PROJECT_ID.ci3.crnd.pro
+        url: http://$CI_ENVIRONMENT_SLUG-$CI_PROJECT_ID.ci4.crnd.pro
     <<: *only_stable_branch
 
 stop_review_dev:
     stage: deploy
     environment:
-        name: review/$SERIES_BRANCH/$CI_COMMIT_REF_NAME
+        name: review/$CI_COMMIT_REF_NAME
         action: stop
     variables:
         GIT_STRATEGY: none
@@ -205,7 +205,7 @@ stop_review_dev:
         - ci-review-app stop
     when: manual
     tags:
-        - traefic
-        - review-apps
         - deploy
+        - odoo-review-ci4-shared
+        - review-apps
     <<: *only_dev_branch
